Added About Me page

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h1>About Me</h1>
-    <p>Welcome to my personal site. In construction.. Just quickly setting it up to host some dbt documentation at the moment..</p>
+    <p>In construction.. Just quickly setting it up to host some dbt documentation at the moment..</p>
     <nav>
         <ul>
             <li><a href="about.html">About Me</a></li>
-            <li><a href="docs/index.html">DBT Documentation</a></li>
+            <li><a href="climate-trace-dbt-docs/index.html">Climate Trace DBT Documentation</a></li>
         </ul>
     </nav>
 </body>
